<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".users.view.UserActivity"
>

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/user_toolbar"
>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/user_head_image"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@id/user_start_guide"
                    app:layout_constraintEnd_toEndOf="@id/user_end_guide"
                    android:layout_marginTop="@dimen/base_margin_x2"
                    app:layout_constraintDimensionRatio="H,1:1"/>

            <androidx.gridlayout.widget.GridLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/user_head_image"
                    app:layout_constraintStart_toStartOf="@+id/user_start_guide"
                    app:layout_constraintEnd_toEndOf="@id/user_end_guide"
                    android:layout_marginTop="@dimen/base_margin_x2"
                    app:columnCount="2"
                    app:useDefaultMargins="true">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_gender_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_gender_label"
                        style="@style/LabelSemiBold.Section"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_gender_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Label.Section"
                        app:layout_gravity="fill_horizontal"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_full_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_full_name_label"
                        style="@style/LabelSemiBold.Section"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_full_name_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Label.Section"
                        app:layout_gravity="fill_horizontal"/>


                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email_label"
                        style="@style/LabelSemiBold.Section"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_email_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Label.Section"
                        app:layout_gravity="fill_horizontal"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_address_label"
                        style="@style/LabelSemiBold.Section"/>


                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_address_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Label.Section"
                        app:layout_gravity="fill_horizontal"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_register_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_register_label"
                        style="@style/LabelSemiBold.Section"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_register_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Label.Section"
                        app:layout_gravity="fill_horizontal"
                />

            </androidx.gridlayout.widget.GridLayout>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/user_start_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintGuide_begin="@dimen/base_margin_x2"
                    android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/user_end_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintGuide_end="@dimen/base_margin_x2"
                    android:orientation="vertical"/>

            <include
                    android:id="@+id/user_progress"
                    layout="@layout/loading_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>